2005-03-15 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	Attempt at fixing 64b issues; as a result, now getting plenty of
	warnings for formatting issues - will fix later

2005-03-15 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c: 
	(1) new opt for the [return] compiler, can now emit INST_BREAK or
	INST_CONTINUE 
	(2) changed logic of the [foreach] instructions, including loop
	rotation optimisation 
	(3) newjump target in TEBC to restart without changing pc

2005-03-15 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c: rewrite of exception return handling. 
	[catch] does not use the ExceptionArray anymore, there are only
	loop exception ranges. Compiler simplification through two new
	functions TclBeginExceptRange and TclEndExceptRange. The proper
	ranges for INST_BREAK and INST_CONTINUE are detected at 
	compile time; this info is used to *rewrite* them to INST_JUMP
	when first encountered (this will disappear once we have the
	optimiser).
	
2005-03-14 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompile.c: 
	- fixed INST_RETURN's stack effect (-1 instead of -2).
	- insured that the bytecodes are aligned
	
	* generic/tclCompCmds.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c: New [catch] logic - completely
	incompatible with the old one, big hurdle for older compiled
	scripts. [catch] now compiles just two instructions, the catch
	range is everything in between INST_BEGIN_CATCH and
	INST_END_CATCH. Preparation for exception range reform (next
	commit). 

2005-03-13 Miguel Sofer <msofer@users.sf.net>

	* generic/tclCompCmds.c:
	* generic/tclCompExpr.c:
	* generic/tclCompile.c:
	* generic/tclCompile.h:
	* generic/tclExecute.c:
	* generic/tclProc.c:
	Each (instruction+operands) takes two words; instructions that